feat(Exception): 예외처리
- 모든 오류메시지는 상수 처리한다.
- 잘못된 입력에 대한 오류메시지를 출력하고 다시 입력받는다.
- README에 예외 발생 상황을 정리한다.
- 코드 컨밴션을 확인한다.